--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -20,7 +20,7 @@
 
   <!-- Custom CSS -->
   <link href="../resources/lib/dist/css/sb-admin-2.css" rel="stylesheet">
-    <link href="../resources/lib/dist/css/map.css" rel="stylesheet">
+  <link href="../resources/lib/dist/css/map.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
   <link href="../resources/lib/bower_components/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -32,10 +32,13 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
   <link rel="stylesheet" href="http://openlayers.org/en/v3.1.1/css/ol.css" type="text/css">
+
+  <link href="../resources/lib/bootstrap3_datepicker/css/bootstrap-datetimepicker.css" rel="stylesheet" type="text/css">
   
   <script src="http://openlayers.org/en/v3.1.1/build/ol.js" type="text/javascript"></script>
 
   <link rel="stylesheet" type="text/css" media="all" href="../resources/lib/daterangepicker/daterangepicker-bs3.css" />
+
 </head>
 <body>
   <div id="wrapper">
@@ -80,10 +83,19 @@
             <div class="panel-body side-menu-top-items">
                 <div class="form-group">
                     <div class="input-prepend input-group side-menu-top-item daterangepicker-wrapper">
-                        <div id="reportrange2" class="btn side-menu-top-item-daterangepicker">
-                            <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
-                            <span></span> <b class="caret"></b>
-                        </div>
+                        <span class="add-on"><i class="glyphicon glyphicon-calendar fa fa-calendar"></i></span>
+                        &nbsp;
+                        <input type='text' class="" id='datepicker-start' style="width: 100px;" />
+                        &nbsp;~
+                        &nbsp;
+                        <span class="add-on"><i class="glyphicon glyphicon-calendar fa fa-calendar"></i></span>
+                        &nbsp;
+                        <input type='text' class="" id='datepicker-end' style="width: 100px;" />
+                        &nbsp;
+
+                        <button class="btn btn-primary btn-sm" data-event-request-chart-btn>
+                            <span ><i class="glyphicon glyphicon-transfer"></i></span>
+                        </button>
                     </div>
 
                     <div class="side-menu-top-item">
@@ -211,7 +223,7 @@
                             <option>2011</option>
                             <option>2012</option>
                             <option>2013</option>
-                            <option>2014</option>
+                            <option selected>2014</option>
                             <option>2015</option>
                         </select>
                         /
@@ -221,7 +233,7 @@
                             <option>2012</option>
                             <option>2013</option>
                             <option>2014</option>
-                            <option>2015</option>
+                            <option selected>2015</option>
                         </select>
                     </div>
 
@@ -300,6 +312,7 @@
 
   <script src="../resources/javascript/chart.js"></script>
   <script src="../resources/javascript/common.js"></script>
+  <script src="../resources/javascript/datepicker.js"></script>
 
   <script src="../resources/lib/highStock/js/highstock.js"></script>
   <script src="../resources/lib/highStock/js/highcharts-more.js"></script>
@@ -307,8 +320,11 @@
 
   <script type="text/javascript" src="../resources/lib/daterangepicker/moment.js"></script>
   <script type="text/javascript" src="../resources/lib/daterangepicker/daterangepicker.js"></script>
+  <script type="text/javascript" src="../resources/lib/bootstrap3_datepicker/js/bootstrap-datetimepicker.js"></script>
+  <script type="text/javascript" src="../resources/lib/blockui/js/jquery.blockUI.js"></script>
 
   <!-- Custom Theme JavaScript -->
   <script src="../resources/lib/dist/js/sb-admin-2.js"></script>
+
 </body>
 </html>
