top side menu 메뉴 리펙토링

--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -119,19 +119,32 @@
                     </div>
 
                     <div class="side-menu-top-item">
-                        <label>
-                            <span data-selectbox-title>Depth :</span>
-                            <select>
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                                <option>6</option>
-                                <option>7</option>
-                            </select>
+                        <span data-selectbox-title>Depth :</span>
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" data-depth-site-item value="0" checked> 1
                         </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" data-depth-site-item value="1"> 2
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" data-depth-site-item value="2"> 3
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" data-depth-site-item value="3"> 4
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" data-depth-site-item value="4"> 5
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" data-depth-site-item value="5"> 6
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" data-depth-site-item value="6"> 7
+                        </label>
+                    </div>
 
+                    <div class="side-menu-top-item">
+                        <span>Level :</span>
                         <span data-checkbox-group>
                           <label class="checkbox-inline">
                               <input type="checkbox" data-event-check="0" checked>
