--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -298,6 +298,9 @@
   <!-- Metis Menu Plugin JavaScript -->
   <script src="../resources/lib/bower_components/metisMenu/dist/metisMenu.min.js"></script>
 
+  <script type="text/javascript" src="../resources/lib/daterangepicker/moment.js"></script>
+  <script type="text/javascript" src="../resources/lib/daterangepicker/daterangepicker.js"></script>
+
   <script src="../resources/javascript/chart.js"></script>
   <script src="../resources/javascript/common.js"></script>
 
@@ -305,8 +308,8 @@
   <script src="../resources/lib/highStock/js/highcharts-more.js"></script>
   <script src="../resources/lib/highStock/js/modules/exporting.js"></script>
 
-  <script type="text/javascript" src="../resources/lib/daterangepicker/moment.js"></script>
-  <script type="text/javascript" src="../resources/lib/daterangepicker/daterangepicker.js"></script>
+
+  <script src="../resources/javascript/network.js"></script>  
 
   <!-- Custom Theme JavaScript -->
   <script src="../resources/lib/dist/js/sb-admin-2.js"></script>
