우측 상단 메뉴 UI 변경 (Depth와 Level을 table 구조로 변경)

--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -114,58 +114,75 @@
                     </div>
 
                     <div class="side-menu-top-item">
-                        <span id="radio-title">depth:</span>
-                        <span id="radio-group">
-                          <label class="radio-inline">
-                              <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" checked> 1
-                          </label>
-                          <label class="radio-inline">
-                              <input type="radio" name="inlineRadioOptions" data-event-select-item value="1"> 2
-                          </label>
-                          <label class="radio-inline">
-                              <input type="radio" name="inlineRadioOptions" data-event-select-item value="2"> 3
-                          </label>
-                          <label class="radio-inline">
-                              <input type="radio" name="inlineRadioOptions" data-event-select-item value="3"> 4
-                          </label>
-                          <label class="radio-inline">
-                              <input type="radio" name="inlineRadioOptions" data-event-select-item value="4"> 5
-                          </label>
-                        </span>
-                    </div>
+                        <table class="side-menu-top-item-table">
+                            <tr class="side-menu-top-item-table-type">
+                                <th>Depth:</th>
+                                <td>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" checked>1
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >2
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >3
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >4
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >5
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >6
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >7
+                                    </label>
+                                </td>
+                            </tr>
 
-                    <div class="side-menu-top-item">
-                        <span id="checkbox-title">site:</span>
-                        <span id="checkbox-group">
-                          <label class="checkbox-inline">
-                              <input type="checkbox" data-event-check="0" checked>
-                              <span>1</span>
-                          </label>
-                          <label class="checkbox-inline">
-                              <input type="checkbox" data-event-check="1" checked>
-                              <span>2</span>
-                          </label>
-                          <label class="checkbox-inline">
-                              <input type="checkbox" data-event-check="2" checked>
-                              <span>3</span>
-                          </label>
-                          <label class="checkbox-inline">
-                              <input type="checkbox" data-event-check="3" checked>
-                              <span>4</span>
-                          </label>
-                          <label class="checkbox-inline">
-                              <input type="checkbox" data-event-check="4" checked>
-                              <span>5</span>
-                          </label>
-                          <label class="checkbox-inline">
-                              <input type="checkbox" data-event-check="5" checked>
-                              <span>6</span>
-                          </label>
-                          <label class="checkbox-inline">
-                              <input type="checkbox" data-event-check="6" checked>
-                              <span>7</span>
-                          </label>
-                        </span>
+                            <tr class="side-menu-top-item-table-level">
+                                <th>Level:</th>
+                                <td>
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" data-event-check="0" checked>1
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" data-event-check="0" checked>2
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" data-event-check="0" checked>3
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" data-event-check="0" checked>4
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" data-event-check="0" checked>5
+                                    </label>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
 
                     <div class="side-menu-top-item">
