--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -11,6 +11,7 @@
 
   <!-- Bootstrap Core CSS -->
   <link href="../resources/lib/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!--<link href="../resources/lib/bower_components/bootstrap/dist/css/bootstrap-bootswatch.css" rel="stylesheet">-->
 
   <!-- MetisMenu CSS -->
   <link href="../resources/lib/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
@@ -115,7 +116,7 @@
 
                     <div class="side-menu-top-item">
                         <table class="side-menu-top-item-table">
-                            <tr class="side-menu-top-item-table-type">
+                            <tr class="side-menu-top-item-table-radio" id="radio-group">
                                 <th>Depth:</th>
                                 <td>
                                     <label class="radio-inline">
@@ -124,38 +125,28 @@
                                 </td>
                                 <td>
                                     <label class="radio-inline">
-                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >2
+                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="1" >2
                                     </label>
                                 </td>
                                 <td>
                                     <label class="radio-inline">
-                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >3
+                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="2" >3
                                     </label>
                                 </td>
                                 <td>
                                     <label class="radio-inline">
-                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >4
+                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="3" >4
                                     </label>
                                 </td>
                                 <td>
                                     <label class="radio-inline">
-                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >5
-                                    </label>
-                                </td>
-                                <td>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >6
-                                    </label>
-                                </td>
-                                <td>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="0" >7
+                                        <input type="radio" name="inlineRadioOptions" data-event-select-item value="4" >5
                                     </label>
                                 </td>
                             </tr>
 
-                            <tr class="side-menu-top-item-table-level">
-                                <th>Level:</th>
+                            <tr class="side-menu-top-item-table-check" id="checkbox-group">
+                                <th>Site:</th>
                                 <td>
                                     <label class="checkbox-inline">
                                         <input type="checkbox" data-event-check="0" checked>1
@@ -163,22 +154,32 @@
                                 </td>
                                 <td>
                                     <label class="checkbox-inline">
-                                        <input type="checkbox" data-event-check="0" checked>2
+                                        <input type="checkbox" data-event-check="1" checked>2
                                     </label>
                                 </td>
                                 <td>
                                     <label class="checkbox-inline">
-                                        <input type="checkbox" data-event-check="0" checked>3
+                                        <input type="checkbox" data-event-check="2" checked>3
                                     </label>
                                 </td>
                                 <td>
                                     <label class="checkbox-inline">
-                                        <input type="checkbox" data-event-check="0" checked>4
+                                        <input type="checkbox" data-event-check="3" checked>4
                                     </label>
                                 </td>
                                 <td>
                                     <label class="checkbox-inline">
-                                        <input type="checkbox" data-event-check="0" checked>5
+                                        <input type="checkbox" data-event-check="4" checked>5
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" data-event-check="5" checked>6
+                                    </label>
+                                </td>
+                                <td>
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" data-event-check="6" checked>7
                                     </label>
                                 </td>
                             </tr>
