--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -230,22 +230,12 @@
                             </label>
                         </div>
 
-                        <select>
-                            <option>2010</option>
-                            <option>2011</option>
-                            <option>2012</option>
-                            <option>2013</option>
-                            <option selected>2014</option>
-                            <option>2015</option>
+                        <select id="data-compare-year">
+                            
                         </select>
                         /
-                        <select>
-                            <option>2010</option>
-                            <option>2011</option>
-                            <option>2012</option>
-                            <option>2013</option>
-                            <option>2014</option>
-                            <option selected>2015</option>
+                        <select id="data-standard-year">
+                            
                         </select>
                     </div>
 
@@ -286,17 +276,7 @@
                     <ul class="list-unstyled" data-bottom-side-menu-list>
                         <li>높은온도 : 100일</li>
                         <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
+                        
                         <li>구간별 평균온도 차이 : 40일</li>
                     </ul>
                 </div>
