1. 강수량 표시 2. x축 y축 표시 변경
기타 등등... (생각안난당...)

--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -291,10 +291,9 @@
                 </div>
 
                 <div class="side-menu-bottom-item-info">
-                    <ul class="list-unstyled" data-bottom-side-menu-list>
+                    <ul data-weather-compare-infomation class="list-unstyled">
                         <li>높은온도 : 100일</li>
                         <li>2015.01.02 ~ 2015.02.02 : +4°C (평균온도 : 10°C)</li>
-                        
                         <li>구간별 평균온도 차이 : 40일</li>
                     </ul>
                 </div>
