강수량 on / off 기능 추가

--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -68,6 +68,16 @@
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
+              <div class="side-menu-bottom-item-datepicker" >
+                <div class="btn-group" data-toggle="buttons">
+                    <label class="btn btn-default active">
+                        <input type="radio" data-event-on-off-precipitation name="data-event-on-off-precipitation" value="on" checked>On
+                    </label>
+                    <label class="btn btn-default">
+                        <input type="radio" data-event-on-off-precipitation name="data-event-on-off-precipitation" value="off">Off
+                    </label>
+                </div>
+              </div>
               <div id="chart-1"></div>
             </div>
             <!-- /.panel-body -->
