1차 리팩토링
(하단 차트 버그 발생)

--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -58,12 +58,12 @@
     </nav>
     <div id="page-wrapper">
       <div class="row"> 
-        <div class="col-lg-8" id="chart-1-panel">
+        <div class="col-lg-8" id="top-chart-panel">
           <div class="panel panel-default">
             <div class="panel-heading">
                 <i class="fa fa-clock-o fa-fw"></i> Underground
-                <button class="btn btn-default btn-sm panel-item-toggle-btn pull-right" data-event-change-panel="chart-1">
-                    <span class="glyphicon glyphicon-resize-full pull-right" id="chart-1-span" aria-hidden="true"></span>
+                <button class="btn btn-default btn-sm panel-item-toggle-btn pull-right" data-event-change-panel="top-chart">
+                    <span class="glyphicon glyphicon-resize-full pull-right" id="top-chart-span" aria-hidden="true"></span>
                 </button>
             </div>
             <!-- /.panel-heading -->
@@ -78,14 +78,14 @@
                     </label>
                 </div>
               </div>
-              <div id="chart-1"></div>
+              <div id="top-chart"></div>
             </div>
             <!-- /.panel-body -->
           </div>
           <!-- /.panel -->
         </div>
         <!-- /.col-lg-8 -->
-        <div class="col-lg-4" id="chart-1-side-panel">
+        <div class="col-lg-4" id="top-chart-side-panel">
           <div class="panel panel-default side-penel">
             <div class="panel-heading" >
                 <i class="fa fa-bell fa-fw"></i> Side Menu
@@ -238,12 +238,12 @@
       </div>
       <!-- /.row -->
       <div class="row">
-        <div class="col-lg-8" id="chart-2-panel">
+        <div class="col-lg-8" id="bottom-chart-panel">
           <div class="panel panel-default">
             <div class="panel-heading">
                 <i class="fa fa-clock-o fa-fw"></i> Outside
-                <button class="btn btn-default btn-sm panel-item-toggle-btn pull-right" data-event-change-panel="chart-2">
-                    <span class="glyphicon glyphicon-resize-full pull-right" id="chart-2-span" aria-hidden="true"></span>
+                <button class="btn btn-default btn-sm panel-item-toggle-btn pull-right" data-event-change-panel="bottom-chart">
+                    <span class="glyphicon glyphicon-resize-full pull-right" id="bottom-chart-span" aria-hidden="true"></span>
                 </button>
             </div>
             <!-- /.panel-heading -->
@@ -267,13 +267,13 @@
                         </select>
                     </div>
 
-                <div id="chart-2"></div>
+                <div id="bottom-chart"></div>
             </div>
             <!-- /.panel-body -->
           </div>
         </div>
         <!-- /.col-lg-8 -->
-        <div class="col-lg-4" id="chart-2-side-panel">
+        <div class="col-lg-4" id="bottom-chart-side-panel">
           <div class="panel panel-default side-penel">
             <div class="panel-heading" >
                 <i class="fa fa-bell fa-fw"></i> Side Menu
