--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -219,25 +219,6 @@
       </div>
       <!-- /.row -->
       <div class="row">
-        <div class="col-lg-12" id="map-panel">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-                <i class="fa fa-clock-o fa-fw"></i> Map
-                <button class="btn btn-default btn-sm panel-item-toggle-btn pull-right" data-event-change-panel="map">
-                    <span class="glyphicon glyphicon-resize-small pull-right" id="map-span" aria-hidden="true"></span>
-                </button>
-            </div>
-            <!-- /.panel-heading -->
-            <div class="panel-body">
-              <div id="map" class="map"></div>
-              <script src="../resources/javascript/openlayer/openlayer.js"></script>
-            </div>
-            <!-- /.panel-body -->
-          </div>
-        </div>
-      </div>
-      <!-- /.row -->
-      <div class="row">
         <div class="col-lg-8" id="bottom-chart-panel">
           <div class="panel panel-default">
             <div class="panel-heading">
@@ -296,6 +277,7 @@
                   </label>
                 </div>
                 <div class="side-menu-bottom-item">
+                  
                   <div class="btn-group" data-toggle="buttons">
                     <label class="btn btn-default btn-sm active" data-event-change-chart-section="all" >
                         <input type="radio" name="data-event-change-chart-section" checked> All
@@ -304,7 +286,7 @@
                         <input type="radio" name="data-event-change-chart-section"> Bud Break
                     </label>
                     <label class="btn btn-default btn-sm" data-event-change-chart-section="flowering" >
-                        <input type="radio" name="data-event-change-chart-section"> Flowering/fruit set
+                        <input type="radio" name="data-event-change-chart-section"> Flowering
                     </label>
                     <label class="btn btn-default btn-sm" data-event-change-chart-section="veraison" >
                         <input type="radio" name="data-event-change-chart-section"> Veraison
@@ -313,6 +295,7 @@
                         <input type="radio" name="data-event-change-chart-section"> Harvest
                     </label>
                   </div>
+                  
                 </div>
 
                 <div class="side-menu-bottom-item-info">
@@ -330,6 +313,25 @@
         </div>
         <!-- /.col-lg-4 -->
       </div>
+      <div class="row">
+        <div class="col-lg-12" id="map-panel">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+                <i class="fa fa-clock-o fa-fw"></i> Map
+                <button class="btn btn-default btn-sm panel-item-toggle-btn pull-right" data-event-change-panel="map">
+                    <span class="glyphicon glyphicon-resize-small pull-right" id="map-span" aria-hidden="true"></span>
+                </button>
+            </div>
+            <!-- /.panel-heading -->
+            <div class="panel-body">
+              <div id="map" class="map"></div>
+              <script src="../resources/javascript/openlayer/openlayer.js"></script>
+            </div>
+            <!-- /.panel-body -->
+          </div>
+        </div>
+      </div>
+      <!-- /.row -->
     </div>
     <!-- /#page-wrapper -->
   </div>
