디자인 변경

--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -10,8 +10,8 @@
   <title>VineSense</title>
 
   <!-- Bootstrap Core CSS -->
-  <link href="../resources/lib/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!--<link href="../resources/lib/bower_components/bootstrap/dist/css/bootstrap-bootswatch.css" rel="stylesheet">-->
+  <!-- <link href="../resources/lib/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+  <link href="../resources/lib/bower_components/bootstrap/dist/css/bootstrap-bootswatch.css" rel="stylesheet">
 
   <!-- MetisMenu CSS -->
   <link href="../resources/lib/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
@@ -113,17 +113,17 @@
                                 <input type="radio" data-event-change-type name="data-event-change-type" value="moisture">Moisture
                             </label>
                         </div>
-                        
-                        <div class="btn-group" data-toggle="buttons">
-                            <label class="btn btn-default active">
-                                <input type="radio" data-event-change-view-option name="data-event-change-view" value="depth" checked>Depth
-                            </label>
-                            <label class="btn btn-default">
-                                <input type="radio" data-event-change-view-option name="data-event-change-view" value="site">Site
-                            </label>
-                        </div>
                     </div>
-
+                    <div class="side-menu-top-item">
+                      <div class="btn-group" data-toggle="buttons">
+                          <label class="btn btn-default active">
+                              <input type="radio" data-event-change-view-option name="data-event-change-view" value="depth" checked>Depth
+                          </label>
+                          <label class="btn btn-default">
+                              <input type="radio" data-event-change-view-option name="data-event-change-view" value="site">Site
+                          </label>
+                      </div>
+                    </div>
                     <div class="side-menu-top-item">
                         <table class="side-menu-top-item-table">
                             <tr class="side-menu-top-item-table-radio" id="radio-group">
